# hw3group-HockeyBot

./: .gitignore  PuckPath.csv  PuckPath_all.csv  README.md  README2.md  inverse.py
hockeybot/: README.md  package.xml  setup.cfg  setup.py  tags.yaml
hockeybot/cv_basics/: package.xml  setup.py
hockeybot/cv_basics/config/: tags.yaml
hockeybot/cv_basics/cv_basics/: AprilTag.py  ros_cv.py  tf.py  trans_cam.py
hockeybot/hockeybot/: cam_node.py  circletrack_ir.py  circletrack_rgb.py  main.py  ros_cv.py  tf.py  traj_calc.py  traj_calc_test.py
hockeybot/launch/: main.launch.py  realsense2.launch.py
hockeybot/test/: test_after_impact_traj_puck.py  test_hockeybot_launch.py  test_main.py
moveit_helper/: README.md  box_new.py  package.xml  setup.cfg  setup.py  setup_BACKUP_4610.py  setup_BASE_4610.py
moveit_helper/Stuff/: joint_states_subscription.yaml  move_action_request Proto.yaml  move_action_request.yaml  plan_response.yaml
moveit_helper/launch/: simple_move.launch.py
moveit_helper/moveit_helper/: box.py  box_new.py  goal_service.py  gripper.py  ik_hanyin_intercept.py  inverse.py  marno_move_group_execute.py  marno_move_group_plan.py  moveIt_helper.py  move_action_intercept.py  quaternion.py  simple_move.py  subscriber_joint_states.py
moveit_interface/: CMakeLists.txt  README.md  package.xml
moveit_interface/srv/: Addobj.srv  Execute.srv  Goal.srv  GripperSrv.srv  Initial.srv
